# pm01-wedding

./: .gitignore  LICENSE  check_audio_devices.py  check_network_firewall.sh  create_wedding_symlink.sh  debug_audio.py  debug_audio_channels.py  old_face_id_tracker.py  old_face_tracker.py  old_motion_adapter_node.py  old_search_state.py  reset_network_firewall.sh  test_ffmpeg_queue.py  test_interview_flow.py  test_interview_logic.py  test_mic.py  test_recording.py  test_vad.py  verify_ffmpeg_hw.sh  verify_noise.py  verify_recorder_logic.py
engineai_ros2_workspace/: README.md
engineai_ros2_workspace/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
engineai_ros2_workspace/install/interface_example/lib/interface_example/: hold_joint_status  joint_test_example  rl_basic_example
engineai_ros2_workspace/install/interface_example/share/interface_example/: local_setup.dsv  package.dsv  package.ps1  package.sh  package.xml
engineai_ros2_workspace/install/interface_example/share/interface_example/cmake/: interface_exampleConfig.cmake
engineai_ros2_workspace/install/interface_example/share/interface_example/config/pm01/: joint_test.yaml  motor.yaml  pd_joint_test.yaml
engineai_ros2_workspace/install/interface_example/share/interface_example/config/pm01/rl_basic/basic/: rl_basic_param.yaml
engineai_ros2_workspace/install/interface_example/share/interface_example/config/pm01/rl_basic/basic/policies/: pm01_v2_rough_ppo_42obs.mnn
engineai_ros2_workspace/install/interface_protocol/share/interface_protocol/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
engineai_ros2_workspace/install/mujoco_simulator/lib/mujoco_simulator/: mujoco_simulator
engineai_ros2_workspace/install/mujoco_simulator/share/mujoco_simulator/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
engineai_ros2_workspace/scripts/: build_nodes.sh  check_format.sh  install.sh  sync_src.sh
engineai_ros2_workspace/src/: wedding_jeston
engineai_ros2_workspace/src/interface_example/: CMakeLists.txt
engineai_ros2_workspace/src/interface_example/launch/: rl_basic_example.launch.py
engineai_ros2_workspace/src/interface_example/scripts/: body_velocity_control_example.py  env.sh
engineai_ros2_workspace/src/interface_example/src/: hold_joint_status.cc  joint_test_example.cc  rl_basic_example.cc
engineai_ros2_workspace/src/interface_example/src/components/: message_handler.cc  message_handler.hpp
engineai_ros2_workspace/src/interface_example/src/math/: concatenate_vector.h  mnn_model.cc  mnn_model.h  rotation_matrix.cc  rotation_matrix.h
engineai_ros2_workspace/src/interface_example/src/parameter/: rl_basic_param.cc  rl_basic_param.h
engineai_ros2_workspace/src/simulation/mujoco/: CMakeLists.txt
engineai_ros2_workspace/src/simulation/mujoco/assets/resource/: pm_v2.xml
engineai_ros2_workspace/src/simulation/mujoco/assets/resource/environment/: human_models.xml  scene_pm_rp.md
engineai_ros2_workspace/src/simulation/mujoco/assets/resource/robot/pm_v2/xml/: serial_links.xml
engineai_ros2_workspace/src/simulation/mujoco/include/: camera_renderer.h  config_loader.h  ros_interface.h  sim_manager.h
engineai_ros2_workspace/src/simulation/mujoco/launch/: mujoco_simulator.launch.py
engineai_ros2_workspace/src/simulation/mujoco/simulate/: CMakeLists.txt  simulate.cc  simulate.h
engineai_ros2_workspace/src/simulation/mujoco/src/: camera_renderer.cc  config_loader.cc  main.cc  ros_interface.cc  sim_manager.cc
wedding_jeston/: README.md  package.xml  pytest.ini  setup.cfg  setup.py
wedding_jeston/config/: parameters.yaml
wedding_jeston/docs/: IDLE_DEBUG_GUIDE.md  INTERVIEW_STATE_DESIGN.md  INTERVIEW_TEST_PLAN.md  REALSENSE_PUBLISHER_DEPLOYMENT.md  VISUALIZATION_GUIDE.md  action_pack_execution_flow.md  engineai_humanoid_analysis.md  engineai_ros2_workspace_analysis.md  fsm.md  motion_test_guide.md  mujoco_rgbd_camera.md  speech_solution.md  wedding_pm01.md
wedding_jeston/launch/: idle_debug.launch.py  interview_test.launch.py  motion_test.launch.py  search_debug.launch.py  wedding_fsm.launch.py
wedding_jeston/models/mediapipe/: blaze_face_short_range.tflite
wedding_jeston/scripts/: README_debug_tracking_delay.md  cleanup_records.py  download_mediapipe_models.py  generate_audio.py  photo_panel_keyboard_control.py  run_tests.sh  setup_sim_env.sh  test_audio_concurrency.py  view_visualization.py
wedding_jeston/test/: INTERVIEW_TEST_QUICK_START.md  README.md  REORGANIZATION_SUMMARY.md
wedding_jeston/test/functional/: test_interview_manual.py
wedding_jeston/test/integration/: __init__.py  test_fsm_standalone.py  test_idle_search_integration.py  test_interview_integration.py
wedding_jeston/test/perception/: __init__.py  test_image_face_detection.py  test_min_face_size.py  test_perception.py
wedding_jeston/test/states/: test_search_state.py
wedding_jeston/test/unit/: TEST_PLAN_FACE_TRACKING.md  test_fsm_data.py  test_idle_search_tracking_logic.py
wedding_jeston/wedding_interaction/action_pack/: __init__.py  action_library.py  action_manager.py
wedding_jeston/wedding_interaction/audio/: speech_manager.py  speech_resources.py
wedding_jeston/wedding_interaction/config/: action_resources.py  motion_resources.py  robot_config.py
wedding_jeston/wedding_interaction/fsm/: __init__.py  wedding_fsm.py  wedding_state.py
wedding_jeston/wedding_interaction/fsm/states/: __init__.py  idle_state.py  interview_recorder.py  interview_state.py  mock_recorder.py  photo_posing_state.py  search_state.py  tracking_state.py
wedding_jeston/wedding_interaction/nodes/: ambient_noise_node.py  motion_adapter_node.py  perception_node.py  perception_visualizer_node.py  realsense_publisher_node.py  speech_player_node.py  wedding_fsm_node.py
wedding_jeston/wedding_interaction/perception/: face_detector.py  face_following_helper.py  face_tracker.py  target_tracker.py
wedding_jeston/wedding_interaction/utils/: audio_utils.py  test_audio_utils.py
(+231 files in other folders)
